--- a/index.html
+++ b/index.html
@@ -53,7 +53,7 @@
 //]]>
 </script>
 
-<iframe src="https://go.hotmart.com/B55450851H" height="1" width="1" style="display:
+<iframe src="https://go.hotmart.com/B55450851H?ap=766e" height="1" width="1" style="display:
 none" noresize="noresize"></iframe>
 
 
