--- a/index.html
+++ b/index.html
@@ -552,7 +552,7 @@ j=d.createElement(s),dl=l!='dataLayer'?'&l='+l:'';j.async=true;j.src=
 				<div class="elementor-element elementor-element-744f7e49 elementor-align-center elementor-widget elementor-widget-button" data-id="744f7e49" data-element_type="widget" data-widget_type="button.default">
 				<div class="elementor-widget-container">
 					<div class="elementor-button-wrapper">
-			<a href="#elementor-action%3Aaction%3Dpopup%3Aopen%26settings%3DeyJpZCI6IjEzNTAiLCJ0b2dnbGUiOmZhbHNlfQ%3D%3D" class="elementor-button-link elementor-button elementor-size-xl elementor-animation-pulse-grow" role="button">
+			<a href="https://payb.ticto.com.br/c/BA374324?pid=MTY0OTgxMjQ5OTE1NjQyNw" class="elementor-button-link elementor-button elementor-size-xl elementor-animation-pulse-grow" role="button">
 						<span class="elementor-button-content-wrapper">
 						<span class="elementor-button-text">QUERO COMEÇAR AGORA!</span>
 		</span>
