--- a/index.html
+++ b/index.html
@@ -899,7 +899,7 @@ Vou te ensinar a personalizar as embalagens e brindes da sua loja da mesma forma
 <div class="elementor-element elementor-element-aa11d3e elementor-widget elementor-widget-button" data-id="aa11d3e" data-element_type="widget" data-widget_type="button.default">
 <div class="elementor-widget-container">
 <div class="elementor-button-wrapper">
-<a href="#" class="elementor-button-link elementor-button elementor-size-sm" role="button">
+<a href="https://api.whatsapp.com/send?phone=5515988192729&text=Ol%C3%A1%2C%20gostaria%20de%20saber%20mais%20informa%C3%A7%C3%B5es%20sobre%20o%20curso!" class="elementor-button-link elementor-button elementor-size-sm" role="button">
 <span class="elementor-button-content-wrapper">
 <span class="elementor-button-icon elementor-align-icon-left">
 <svg aria-hidden="true" class="e-font-icon-svg e-fab-whatsapp"><use xlink:href="https://api.whatsapp.com/send?phone=5515988192729&text=Ol%C3%A1%2C%20gostaria%20de%20saber%20mais%20informa%C3%A7%C3%B5es%20sobre%20o%20curso!" /></svg> </span>
